--- a/users/static/css/style.css
+++ b/users/static/css/style.css
@@ -2,14 +2,14 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f8f8;
+    background-color: white;
     text-align: center;
 }
 .main-content{
     margin-top: 100px;
 }
 
-/* Navbar */
+/* Welcome page navbar */
 .navbar {
     background-color: #ff440f;
     padding: 10px 20px;
