--- a/users/templates/welcome_page.html
+++ b/users/templates/welcome_page.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg shadow-sm p-3">
         <div class="container">
-            <a class="logo navbar-brand fs-3" href="#">
+            <a class="logo navbar-brand fs-3" href="{% url 'welcome_page' %}">
                 <img src="{% static 'images/logo.png' %}" alt="Logo" width="40" class="me-2">
                 ReWork
             </a>
@@ -24,7 +24,7 @@
                     <li class="nav-item"><a class="nav-link navbar-text fw-bold" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link navbar-text fw-bold" href="#">Contact Us</a></li>
                 </ul>
-                <a href="#" class=" yellow-button ms-3 rounded-pill px-4 py-2 fw-bold">Log in</a>
+                <a href="{% url 'log_in' %}" class=" yellow-button ms-3 rounded-pill px-4 py-2 fw-bold">Log in</a>
                 <a href="#" class=" yellow-button ms-2 rounded-pill px-4 py-2 fw-bold">Get Started</a>
             </div>
         </div>
