--- a/users/templates/sign_up.html
+++ b/users/templates/sign_up.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReWork - Login</title>
+    <title>ReWork - Signup</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <p>Hey, this is the log in page</p>
+    <h1>Sign Up</h1>
+    <form action="{% url 'sign_up'%}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Sign up">
+    </form>
 </body>
