--- a/users/templates/partials/navbar.html
+++ b/users/templates/partials/navbar.html
@@ -6,30 +6,33 @@
     </div>
     <ul class="nav-links">
         <li>
-            <a href="{% url 'dashboard' %}">
+            <a href="{% url 'dashboard' %}" class="{%if request.path == '/dashboard/' %}active{% endif %}">
                 <img src="{% static 'img/dashboard.svg' %}" alt="Dashboard" class="icon">
                 <span>Dashboard</span>
             </a>
         </li>
         <li>
-            <a href="{% url 'modules' %}">
+            <a href="{% url 'modules' %}" class="{%if request.path == '/modules/' %}active{% endif %}">
                 <img src="{% static 'img/modules.svg' %}" alt="Modules" class="icon">
                 <span>Modules</span>
             </a>
         </li>
         <li>
-            <a href="{% url 'profile' %}">
+            <a href="{% url 'profile' %}" class="{%if request.path == '/profile/' %}active{% endif %}">
                 <img src="{% static 'img/profile.svg' %}" alt="Profile" class="icon">
                 <span>Profile</span>
             </a>
         </li>
-        <div class="toggle">
-            <img src="{% static 'img/toggle.svg' %}" alt="Logo" class="toggleIcon">
-        </div>
         <div class="logout">
-            <a href="{% url 'logout' %}"></a>
+            <a href="{% url 'logout' %}" class="{%if request.path == '/logout/' %}active{% endif %}">
             <img src="{% static 'img/logout.svg' %}" alt="Logout" class="icon">
             <span>Logout</span>
+            </a>
         </div>
     </ul>
+
+    <div class="toggle">
+        <img src="{% static 'img/toggle.svg' %}" alt="Toggle Menu" class="toggleIcon">
+    </div>
+
 </div>
