--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -9,6 +9,8 @@
 
     <!-- Link to your CSS file -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% block extra_css %} {% endblock %}
+
 </head>
 <body>
 
