--- a/users/templates/sign_up.html
+++ b/users/templates/sign_up.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>Sign Up</h1>
-    <form action="{% url 'sign_up'%}" method="post">
+    <form action="{% url 'sign_up' %}" method="post">
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_p }}
         <input type="submit" value="Sign up">
     </form>
 </body>
+</html>
