--- a/users/templates/welcome_page.html
+++ b/users/templates/welcome_page.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link navbar-text fw-bold" href="#">Contact Us</a></li>
                 </ul>
                 <a href="{% url 'log_in' %}" class=" yellow-button ms-3 rounded-pill px-4 py-2 fw-bold">Log in</a>
-                <a href="#" class=" yellow-button ms-2 rounded-pill px-4 py-2 fw-bold">Get Started</a>
+                <a href="{% url 'sign_up' %}" class=" yellow-button ms-2 rounded-pill px-4 py-2 fw-bold">Get Started</a>
             </div>
         </div>
     </nav>
