--- a/client/templates/users_management.html
+++ b/client/templates/users_management.html
@@ -35,8 +35,8 @@
             {% for user in users %}
             <tr>
                 <td>{{ user.id }}</td>
-                <td>{{ user.full_name }}</td>
-                <td>{{ user.email }}</td>
+                <td>{{ user.user.first_name }}</td>
+                <td>{{ user.user.email }}</td>
                 <td>{{ user.age }}</td>
                 <td>{{ user.gender }}</td>
             </tr>
