--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -216,4 +216,54 @@ body {
     opacity: 1;
 }
 
+/* The log out modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease-in-out;
+}
 
+#logout-modal:target {
+    display: flex;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+/* Modal content */
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0px 0px 10px #F24505;
+    min-width: 300px;
+}
+
+/* Buttons */
+.modal-content button {
+    margin: 10px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.modal-content button:first-child {
+    background: red;
+    color: white;
+}
+
+.modal-content button:last-child {
+    background: #F24505;
+    color: white;
+}
