--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -19,5 +19,17 @@
         {% endblock %}
     </div>
 
+<div id="logout-modal" class="modal">
+    <div class="modal-content">
+        <h2>Are you sure you want to log out?</h2>
+        <form method="POST" action="{% url 'log_out' %}">
+            {% csrf_token %}
+            <button type="submit">Yes, Log Out</button>
+            <a href="#"><button type="button">Cancel</button></a>
+        </form>
+    </div>
+</div>
+
+
 </body>
 </html>
