--- a/users/templates/log_in.html
+++ b/users/templates/log_in.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReWork - Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <p>Hey, this is the log in page</p>
-</body>
+
+<h2>Login</h2>
+  
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+
+    <button type="submit">Log In</button>
+</form>
+
+<p>Don't have an account? <a href="{% url 'sign_up' %}">Sign Up</a></p>
+
