--- a/users/templates/sign_up.html
+++ b/users/templates/sign_up.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReWork - Signup</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <h1>Sign Up</h1>
-    <form action="{% url 'sign_up' %}" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Sign up">
-    </form>
-</body>
-</html>
+<h2>Sign Up</h2>
+
+<form method="POST">
+    {% csrf_token %}
+    
+    <h3>Account Details</h3>
+    {{ user_form.as_p }}
+
+    <h3>Profile Information</h3>
+    {{ profile_form.as_p }}
+
+    <input type="submit" value="Sign Up">
+</form>
