--- a/users/templates/welcome_page.html
+++ b/users/templates/welcome_page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReWork - Readiness to Return</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user_authentication.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg shadow-sm p-3">
@@ -68,7 +68,7 @@
         </section>
         <div class="text-center my-5">
             <p class="mid-text">Ready to begin? Take your first step by answering a few quick questions!</p>
-            <a href="#" style="font-size: 24px;" class="orange-button rounded-pill px-5 py-2 fw-bold ">Get Started!</a>
+            <a href="{% url 'sign_up' %}" class="orange-button rounded-pill px-5 py-2 fw-bold ">Get Started!</a>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
