--- a/users/templates/log_in.html
+++ b/users/templates/log_in.html
@@ -1,12 +1,30 @@
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ReWork - Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/user_authentication.css' %}">
+</head>
+<body>
+    {% include 'welcome_page_navbar.html' %}
 
-<h2>Login</h2>
-  
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
+    <div class="d-flex justify-content-center align-items-center min-vh-100">
+        <div class="card p-4 shadow-lg" style="width: 350px;">
+            <h1 class="text-center">Log In</h1>
+            <form method="POST" class="mt-3">
+                {% csrf_token %}
+                <div class="mb-3">
+                    {{ form.as_p }}
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Log In</button>
+            </form>
+            <p class="text-center mt-3">Don't have an account? <a href="{% url 'sign_up' %}">Sign Up</a></p>
+        </div>
+    </div>
 
-    <button type="submit">Log In</button>
-</form>
-
-<p>Don't have an account? <a href="{% url 'sign_up' %}">Sign Up</a></p>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
