--- a/users/templates/user_responses.html
+++ b/users/templates/user_responses.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
 <div class="container mt-4">
     <h2>User Responses</h2>
-    
+
     {% for exercise, responses in responses_by_exercise.items %}
         <div class="card mb-3">
             <div class="card-header">
@@ -19,6 +19,8 @@
                 {% endfor %}
             </div>
         </div>
+    {% empty %}
+        <p>No exercises found.</p>
     {% endfor %}
 </div>
 {% endblock %}
