--- a/static/css/modules_management.css
+++ b/static/css/modules_management.css
@@ -48,13 +48,7 @@ body {
     margin-left: 5px;
 }
 
-
-.card.sales { background: #0048FF; }
-.card.orders { background: #F24505; }
-.card.visitors { background: #CEE7F2; }
-.card.m4 { background: #44778d; }
-.card.m5 { background: #a7d4e8; }
-.card.m6 { background: #a7d4e8; }
+/* .card.sales { background: #0048FF; } */
 
 
 .card:hover {
@@ -62,6 +56,43 @@ body {
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
     cursor: pointer;
 }
+
+/* Style for dynamically generated module cards */
+.module-card {
+    height: 180px;
+    min-width: 200px;
+    max-width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 10px;
+    color: white;
+    transition: transform 0.2s ease-in-out;    
+}
+
+/* Ensure text is centered properly */
+.module-card h2 {
+    margin: 0;
+    font-size: 18px;
+}
+
+/* Hover Effect */
+.module-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+.color1 { background-color: #CEE7F2; }
+.color2 { background-color: #44778d; }
+.color3 { background-color: #a7d4e8; }
+.color4 { background-color: #ff5733; }
+.color5 { background-color: #3498DB; }
+.color6 { background-color: #CEE7F2; }
+
 
 
 /* Adjusts the number of columns for smaller screens */
