--- a/users/templates/contact_us.html
+++ b/users/templates/contact_us.html
@@ -4,16 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReWork - About</title>
+    <title>ReWork - Contact us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/user_authentication.css' %}">
 </head>
-<body class="about">
+<body class="">
 
     {% include 'welcome_page_navbar.html' %}
-    <div class="container">
-        container
-    </div>
 
 </body>
 </html>
