--- a/users/templates/welcome_page.html
+++ b/users/templates/welcome_page.html
@@ -49,7 +49,7 @@
         </section>
         <div class="text-center my-5">
             <p class="mid-text">Ready to begin? Take your first step by answering a few quick questions!</p>
-            <a href="{% url 'sign_up' %}" class="orange-button rounded-pill px-5 py-2 fw-bold ">Get Started!</a>
+            <a href="{% url 'sign_up_step_1' %}" class="orange-button rounded-pill px-5 py-2 fw-bold ">Get Started!</a>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
