--- a/users/templates/welcome_page_navbar.html
+++ b/users/templates/welcome_page_navbar.html
@@ -10,12 +10,12 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link navbar-text fw-bold" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link navbar-text fw-bold" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link navbar-text fw-bold" href="#">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link navbar-text fw-bold" href="{% url 'welcome_page' %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link navbar-text fw-bold" href="{% url 'about' %}">About</a></li>
+                <li class="nav-item"><a class="nav-link navbar-text fw-bold" href="{% url 'contact_us' %}">Contact Us</a></li>
             </ul>
             <a href="{% url 'log_in' %}" class="yellow-button ms-3 rounded-pill px-4 py-2 fw-bold">Log in</a>
-            <a href="{% url 'sign_up' %}" class="yellow-button ms-2 rounded-pill px-4 py-2 fw-bold">Get Started</a>
+            <a href="{% url 'sign_up_step_1' %}" class="yellow-button ms-2 rounded-pill px-4 py-2 fw-bold">Get Started</a>
         </div>
     </div>
 </nav>
