--- a/users/templates/UserResponce/user_responses_main.html
+++ b/users/templates/UserResponce/user_responses_main.html
@@ -1,26 +1,17 @@
 {% extends "base.html" %}
-
-
+{% load static %}
 
 {% block content %}
-<div class="container mt-4">
-    <h2 class="text-center mb-4">Your Exercises</h2>
-    {% load static %}
-    <link rel="stylesheet" href="{% static '/css/userresponse_style.css' %}">
-    <div class="row">
+    <div class="exercise-container">
+        {% load static %}
+        <link rel="stylesheet" href="{% static '/css/userresponse_style.css' %}">
         {% for exercise in exercises %}
-            <div class="col-md-4 mb-4">
-                <a href="{% url 'exercise_detail' exercise.id %}" class="card-link">
-                    <div class="card exercise-card">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ exercise.title }}</h5>
-                        </div>
-                    </div>
-                </a>
-            </div>
+            <button class="exercise-box exercise-style-{{ forloop.counter|divisibleby:5|add:1 }}">
+                <h3>{{ exercise.title }}</h3>
+                <p>{{ exercise.exercise_type }}</p>
+            </button>
         {% empty %}
-            <p class="text-muted text-center">No exercises found.</p>
+            <p>No exercises found!</p>
         {% endfor %}
     </div>
-</div>
 {% endblock %}
