--- a/users/templates/questionnaire.html
+++ b/users/templates/questionnaire.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
 
+<link rel="stylesheet" href="{% static 'css/onboarding.css' %}">
 {% block title %}Onboarding Questionnaire{% endblock %}
 
 {% block content %}
@@ -107,3 +110,4 @@
     window.onload = updateQuestion;
 </script>
 {% endblock %}
+</html>
