--- a/users/templates/welcome.html
+++ b/users/templates/welcome.html
@@ -1,6 +1,9 @@
-{% extends 'base.html' %}
-
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<link rel="stylesheet" href="{% static 'css/onboarding.css' %}">
 {% block title %}Welcome to ReWork{% endblock %}
+
 
 {% block content %}
     <div class="container">
@@ -23,3 +26,4 @@
         </div>
     </div>
 {% endblock %}
+</html>
