change file structure

--- a/client/templates/client/base.html
+++ b/client/templates/client/base.html
@@ -8,13 +8,14 @@
     <title>{% block title %}ReWork{% endblock %}</title>
 
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'client/css/styles.css' %}">
     {% block extra_css %} {% endblock %}
-
+    
 </head>
+
 <body>
 
-    {% include 'partials/navbar.html' %}
+    {% include 'client/partials/navbar.html' %}
 
     <div class="content">
         {% block content %}
