--- a/client/templates/client/modules_management.html
+++ b/client/templates/client/modules_management.html
@@ -1,9 +1,9 @@
 <!-- index.html -->
-{% extends 'base.html' %}
+{% extends 'client/base.html' %}
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/modules_management.css' %}">
+<link rel="stylesheet" href="{% static 'client/css/modules_management.css' %}">
 {% endblock %}
 
 <!-- Content block  -->
