--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -8,11 +8,13 @@
     <title>{% block title %}ReWork{% endblock %}</title>
 
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'users/css/styles.css' %}">
+    {% block extra_css %} {% endblock %}
+
 </head>
 <body>
-
-    {% include 'partials/navbar.html' %}
+    
+    {% include 'users/partials/navbar.html' %}
 
     <div class="content">
         {% block content %}
