--- a/client/templates/client_base.html
+++ b/client/templates/client_base.html
@@ -8,11 +8,13 @@
     <title>{% block title %}ReWork{% endblock %}</title>
 
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% block extra_css %} {% endblock %}
+
 </head>
 <body>
 
-    {% include 'partials/navbar.html' %}
+    {% include 'partials/client_navbar.html' %}
 
     <div class="content">
         {% block content %}
