--- a/users/templates/partials/navbar.html
+++ b/users/templates/partials/navbar.html
@@ -12,7 +12,7 @@
             </a>
         </li>
         <li>
-            <a href="{% url 'modules' %}" class="{%if request.path == '/modules/' %}active{% endif %}">
+            <a href="{% url 'userModules' %}" class="{%if request.path == '/userModules/' %}active{% endif %}">
                 <img src="{% static 'img/modules.svg' %}" alt="Modules" class="icon">
                 <span>Modules</span>
             </a>
