chnage styles.css to navbar.css

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}ReWork{% endblock %}</title>
 
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="{% static 'users/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'users/css/navbar.css' %}">
     {% block extra_css %} {% endblock %}
 
 </head>
