--- a/client/templates/client/base.html
+++ b/client/templates/client/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}ReWork{% endblock %}</title>
 
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="{% static 'client/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'client/css/navbar.css' %}">
     {% block extra_css %} {% endblock %}
     
 </head>
