--- a/client/static/client/css/reports.css
+++ b/client/static/client/css/reports.css
@@ -21,9 +21,8 @@ body {
 }
 
 .card-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
+    display:flex;
+    align-items:center;
     gap: 30px; 
     width: 100%;
 }
@@ -35,12 +34,13 @@ body {
     color: white;
     margin-top: 50px;
     text-align: justify;
-    height: 180px;
+    height: 100px;
     width: 200px;
 }
 
 .card h2 {
     margin-left: 15px;
+    font-size: 20px;
 }
 
 .count {
@@ -51,16 +51,15 @@ body {
 
 .card img {
     margin-top: 35px;
-    width: 40px; /* ✅ Adjust image size */
-    height: 40px;
+
 }
 
 
 .card.sales { background: #0048FF; }
-.card.orders { background: #F24505; }
+.card.orders { background: #CEE7F2; }
 .card.visitors { background: #CEE7F2; }
 
-
+/* 
 .card, .chart-box {
     flex: 1;
     max-width: 32%; 
@@ -69,7 +68,7 @@ body {
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
+} */
 
 .charts {
     display: flex;
@@ -101,6 +100,12 @@ body {
 }
 
 .card:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+.chart-box:hover {
     transform: scale(1.05);
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
     cursor: pointer;
